Sun Apr 12 18:54:29 PDT 1998 Shawn T. Amundson <amundson@gtk.org>

	* Changed LGPL address for FSF in all .h and .c files

Sun Apr 12 20:09:40 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtklabel.[ch] (gtk_label_expose): Set a flag so
	instead of clearing the area in advance. That looked
	_really_ bad.

	* gtk/gtkcontainer.c (gtk_container_class_init): Changed
	"focus" to RUN_LAST.

	* gtk/gtkentry.c (gtk_entry_realize): Fixed place
	where allocation was used where requisition was meant.
	(Found by David J N Begley <david@avarice.nepean.uws.edu.au>)

	* gtk/gtkwindow.c (gtk_window_set_default): Fixed
	assertion in when setting default to NULL> 
	("Damon Chaplin" <DAChaplin@email.msn.com>)

	* gtk/gtkwidget.c (gtk_widget_unparent): Unset the
	default widget on the toplevel, if necessary.

Sun Apr 12 02:04:21 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkpreview.c: Removed unecessary and harmful
	htons/ntohs when storing properties. (X does the byte
	swapping itself)

Sat Apr 11 02:01:31 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtktext.c (scroll_down): Removed incorrect part of
	assertion that was causing failures for scrolling a single
	line very short text widget.

Sat Apr 11 01:41:55 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtktext.c (expose_text): Fixed a sign problem 
	(typedef gint guint!). Added some checks to make sure things
	are positive.

Sat Apr 11 05:51:22 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtktooltips.c (gtk_tooltips_event_handler): don't shut down the
	tooltip on expose events.

	* gtk/testgtk.c (create_progress_bar): add an example tooltip.

Fri Apr 10 00:10:16 1998  Owen Taylor  <owt1@cornell.edu>

	* README/INSTALL: Extended for the 1.0 release.
  	* TODO:           Eliminated the "before 1.0" section

Thu Apr  9 19:31:51 PDT 1998 Shawn T. Amundson <amundson@gtk.org>

	* AUTHORS NEWS README configure.in gtk+.spec glib/configure.in:
	  changes for 1.0.0 release.

Thu Apr  9 18:36:31 1998  Owen Taylor  <owt1@cornell.edu>
